tests/parser/errors/error_union.ray
let a: int![bool]
let a: float|int ! ?bool
